--- a/index.css
+++ b/index.css
@@ -41,3 +41,24 @@ button {
     font-family: 'Rubik', sans-serif;
     margin: 10px 0; 
 }
+
+ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    
+}
+
+ul li {
+    text-align: center;
+    border-radius: 8px;
+    margin: 2px 2px;
+    padding: 20px;
+    flex-grow: 1;
+    background-color: #FFFDF8;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+    
+   
+}
